--- a/app/views/list.html
+++ b/app/views/list.html
@@ -1,6 +1,15 @@
 <div class="jumbotron">
   <p><a class="btn btn-lg btn-success" ng-click="fetchData()">Fetch!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-lg btn-success" ng-click="getData()">Get!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="row marketing">
 </div>
+
+<div ng-repeat="row in rows">
+    <div class="row">
+        <div class="col-xs-6 col-sm-6 col-md-6"><p>{{ row.times }}</p></div>
+        <div class="col-xs-6 col-sm-6 col-md-6"><p>{{ row.num }}</p></div>
+    </div>
+</div>
+  
