--- a/app/views/forecast.html
+++ b/app/views/forecast.html
@@ -1,8 +1,8 @@
 <div class="jumbotron">
     <div class="btn-group">
         <a class="btn btn-lg btn-success" ng-click="clearData()">Clear!<span class="glyphicon glyphicon-ok"></span></a>
-        <a class="btn btn-lg btn-success" ng-click="getData(true)">Get!<span class="glyphicon glyphicon-ok"></span></a>
-        <a class="btn btn-lg btn-success" ng-click="getData(false)">Get!<span class="glyphicon glyphicon-ok"></span></a>
+        <a class="btn btn-lg btn-success" ng-click="getData(true)">GetASC!<span class="glyphicon glyphicon-ok"></span></a>
+        <a class="btn btn-lg btn-success" ng-click="getData(false)">GetDESC!<span class="glyphicon glyphicon-ok"></span></a>
     </div>
 </div>
 <div class="row marketing">
